--- a/package.json
+++ b/package.json
@@ -8,12 +8,14 @@
     "start": "next start"
   },
   "dependencies": {
+    "@tailwindcss/postcss": "^4.0.6",
     "autoprefixer": "^9.8.8",
     "contentful": "^11.4.6",
     "next": "^12.3.4",
     "postcss": "^7.0.39",
     "postcss-scss": "^3.0.5",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "tailwindcss": "^4.0.6"
   }
 }
