--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "@contentful/rich-text-react-renderer": "^16.0.1",
     "@tailwindcss/postcss": "^4.0.6",
     "autoprefixer": "^9.8.8",
     "contentful": "^11.4.6",
